# very_demure

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  transcript.txt
containers/docker/: Dockerfile  Dockerfile.dockerignore
docs/: index.html
docs/samples/: neural-Matthew-1.txt
infra/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  cdk.json  pyproject.toml
infra/src/very_demure_infra/: backend_stack.py  frontend_stack.py  very_demure_stack.py
infra/tests/unit/: test_infra_stack.py
src/very_demure/: __main__.py  bedrock.py  openai.py  polly.py  prompt.py  schema.py  utils.py
tests/: test_polly.py  test_schema.py
tests/test_polly_scripts/: 001-expectation.ssml.xml  001-test.txt  002-expectation.ssml.xml  002-test.txt
